# rust-witness

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build_w2c2.sh  build_wasm2c.sh  input.json  install_w2c2.sh
.cargo/: config.toml
.github/workflows/: build.yml
circom/: Makefile  circom.hpp  fr.cpp  fr.hpp  fr_element.hpp  main.cpp  out.wtns
circuits/: globals.c
src/: globals.c  lib.rs  main.rs  transpile.rs  witness.cpp
tests/: main.rs
