[package]
name = "rust-witness"
version = "0.1.3"
edition = "2021"
description = "Build a circom witness in Rust"
license = "Apache-2.0"
homepage = "https://github.com/chancehudson/rust-witness"
repository = "https://github.com/chancehudson/rust-witness.git"

[dependencies]
cc = { version = "1.2.10", features = ["parallel"] }
fnv = "1.0.7"
num-bigint = "0.4.0"
num-traits = "0.2.0"
paste = "1.0.0"
walkdir = "2.5.0"

[build-dependencies]
cc = { version = "1.2.10", features = ["parallel"] }
walkdir = "2.5.0"

[lib]
